--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -184,3 +184,65 @@ p {
 .hero {
   padding: 22px 80px 66px 80px;
 }
+
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  *zoom: 1;
+}
+/*
+  ========================================
+  Primary header
+  ========================================
+*/
+
+.logo {
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+  float: left;
+}
+/*
+  ========================================
+  Primary footer
+  ========================================
+*/
+
+.primary-footer small {
+  float: left;
+}
+.primary-footer {
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
+.col-1-3 {
+  width: 33.33%;
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.col-2-3 {
+  width: 66.66%;
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.grid {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  width: 960px;
+}
