--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -297,7 +297,6 @@ p a {
 .nav {
   text-align: right;
 }
-
 .nav li {
   display: inline-block;
   margin: 0 10px;
@@ -335,19 +334,42 @@ p a {
   margin-bottom: 22px;
   max-width: 100%
 }
+
 /*
   ========================================
   Speakers
   ========================================
 */
-  
+
+.speaker {
+  margin-bottom: 44px;
+}
 .speaker-info {
   border: 1px solid #dfe2e5;
   border-radius: 5px;
   margin-top: 88px;
-  padding: 22px 0;
+  padding-bottom: 22px;
   text-align: center;
 }
-.speaker {
-  margin-bottom: 44px;
+.speaker-info img {
+  border-radius: 50%;
+  height: 130px;
+  margin: -66px 0 22px 0;
+  vertical-align: top;
+}
+
+/*
+  ========================================
+  Venue
+  ========================================
+*/
+
+.venue-theatre {
+  margin-bottom: 66px;
+}
+.venue-hotel {
+  margin-bottom: 22px;
+}
+.venue-map {
+  height: 264px;
 }
